--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -5,5 +5,6 @@
 .products-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 45px;
+    gap: 35px;
+    margin: 100px 40px;
 }
